--- a/NerdClub/ReservMe/DEV/mobile/padrao/ReservMe/android/settings.gradle
+++ b/NerdClub/ReservMe/DEV/mobile/padrao/ReservMe/android/settings.gradle
@@ -1,7 +1,3 @@
 rootProject.name = 'ReservMe'
-include ':react-native-text-input-mask'
-project(':react-native-text-input-mask').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-text-input-mask/android')
-include ':react-native-gesture-handler'
-project(':react-native-gesture-handler').projectDir = new File(rootProject.projectDir, '../node_modules/react-native-gesture-handler/android')
-
+apply from: file("../node_modules/@react-native-community/cli-platform-android/native_modules.gradle"); applyNativeModulesSettingsGradle(settings)
 include ':app'
